<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/add_friend"
        android:orderInCategory="100"
        android:title="@string/add_friend"
        app:showAsAction="never" />
    <item
        android:id="@+id/scanner_code"
        android:orderInCategory="100"
        android:title="@string/scanner_code"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/ab_search"
        android:orderInCategory="80"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
</menu>
