<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/total"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_padding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/news_headlines"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/title_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/postDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/update_time" />

                    <TextView
                        android:id="@+id/newsSource"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/News_sources" />

                    <TextView
                        android:id="@+id/newsAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/author" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hot" />

                    <TextView
                        android:id="@+id/hitCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0000" />
                </LinearLayout>

            </LinearLayout>

            <WebView
                android:id="@+id/newsDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/news_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/develop_reading"
                android:textSize="@dimen/title_text_size" />

            <ListView
                android:id="@+id/correlation"
                android:layout_width="match_parent"
                android:layout_height="300dp">

            </ListView>
        </LinearLayout>

    </ScrollView>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/composer_buttons_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:clipChildren="false"
            android:clipToPadding="false">

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>