<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/mid_min_margin"
    android:orientation="horizontal"
    android:id="@+id/item_list_msg_layout">

    <ImageView
        android:id="@+id/msg_image"
        android:layout_width="@dimen/max_margin"
        android:layout_height="@dimen/max_margin"
        android:src="@mipmap/me" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textColor="@android:color/black"
                android:textSize="@dimen/nickname_text_size" />

            <TextView
                android:id="@+id/msg_arrive_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/msg_arrive_time" />
        </RelativeLayout>

        <TextView
            android:id="@+id/latest_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_min_margin"
            android:text="@string/latest_msg"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/msg_text_size" />
    </LinearLayout>

</LinearLayout>