<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_me"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/user_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@mipmap/me" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/min_margin">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/mid_min_margin"
                        android:stretchColumns="1">

                        <TableRow>

                            <ImageView
                                android:layout_width="@dimen/max_margin"
                                android:layout_height="@dimen/max_margin"
                                android:src="@mipmap/me_pressed" />

                            <TextView
                                android:id="@+id/nickname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                                android:text="@string/nickname"
                                android:textSize="@dimen/nickname_text_size" />
                        </TableRow>

                        <TableRow>

                            <ImageView
                                android:layout_width="@dimen/max_margin"
                                android:layout_height="@dimen/max_margin"
                                android:src="@mipmap/me_pressed" />

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                                android:text="@string/username"
                                android:textSize="@dimen/nickname_text_size" />
                        </TableRow>

                        <TableRow>

                            <ImageView
                                android:layout_width="@dimen/max_margin"
                                android:layout_height="@dimen/max_margin"
                                android:src="@mipmap/me_pressed" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                                android:text="@string/personalized_signature"
                                android:textSize="@dimen/nickname_text_size" />
                        </TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/mid_min_margin"
                            android:text="人生就是这样，有欢笑也有泪水。一部分人主要负责欢笑，另一部分人主要负。" />

                        <TableRow>

                            <ImageView
                                android:layout_width="@dimen/max_margin"
                                android:layout_height="@dimen/max_margin"
                                android:src="@mipmap/me_pressed" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                                android:text="@string/set"
                                android:textSize="@dimen/nickname_text_size" />
                        </TableRow>

                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/min_margin">

                            <Button
                                android:id="@+id/modification"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@color/blue"
                                android:text="@string/modification"
                                android:textSize="@dimen/nickname_text_size" />
                        </android.support.v7.widget.CardView>
                    </TableLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/min_margin">

                    <Button
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/red"
                        android:text="@string/logout"
                        android:textSize="@dimen/nickname_text_size" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>